Руссифицировал главное меню

--- a/inner.html
+++ b/inner.html
@@ -16,11 +16,11 @@
 
 	<div id="templatemo_menu">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#" class="current">Blog</a></li>
-          <li class="last"><a href="#">Contact Us</a></li>
+          <li><a href="#">Главная </a></li>
+          <li><a href="#">О нас </a></li>
+          <li><a href="#">Галерея</a></li>
+          <li><a href="#" class="current">Блог</a></li>
+          <li class="last"><a href="#">Контакты</a></li>
         </ul>
 	</div> <!-- end of menu -->
     
